--- a/myapp/welcome.css
+++ b/myapp/welcome.css
@@ -9,7 +9,11 @@ body{
     background-position: center;
     background-size: cover;
     width: 100%;
-    height: 109vh;
+    height: 105vh;
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items:center;
 }
 .welcome{
     position: absolute;
@@ -20,12 +24,11 @@ body{
 }
 .welcome a{
     border: 1px solid #fff;
-    padding: 10px 25px;
+    padding: 1.3vh 2.5vh;
     border-radius: 10px;
     text-decoration: none;
-    font-size: 20px;
-    margin-top: 25px;
+    font-size: 2.2vh;
+    margin-top: 2vh;
     display: inline-block;
     color: #fff;
-
 }
