--- a/myapp/home.css
+++ b/myapp/home.css
@@ -156,3 +156,54 @@ main{
 	font-size: 15px;
 	margin-bottom: 5px;
 }
+
+@media only screen and (max-width: 912px){
+	.textbox{
+		display: flex;
+		flex-wrap:wrap;
+		align-items:center;
+		justify-content : center;
+	}
+	.img{
+		background-image: url("image11.jpg");
+		background-position: center;
+		background-size: cover;
+		border: 2px solid black;
+		box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+		flex-basis: calc(33.33% - 10px);
+		margin-top: 10px;
+		padding: 5px;
+		
+		height: 30vh;
+		border-radius: 15px;
+	}
+
+}
+
+
+
+@media (max-width: 768px) {
+	header {
+	  flex-direction: column; 
+	  text-align: center; 
+	}
+  
+	
+	.logo {
+	  margin-bottom: 10px; 
+	  padding:5px;/* Add some spacing between logo and nav */
+	}
+  
+	nav ul {
+	  list-style: none;
+	  padding: 0;
+	}
+  
+	nav li {
+	  margin-bottom: 10px; 
+	}
+  }
+  
+  
+  
+  
