--- a/myapp/shop.css
+++ b/myapp/shop.css
@@ -134,4 +134,31 @@ main {
 	margin-bottom: 10px;
 }
 
+	@media (max-width: 768px) {
+		header {
+		  flex-direction: column; 
+		  text-align: center; 
+		}
+	  
+		
+		.logo {
+		  margin-bottom: 10px; 
+		  padding:5px;
+		}
+	  
+		nav ul {
+		  list-style: none;
+		  padding: 0;
+		}
+	  
+		nav li {
+		  margin-bottom: 10px; 
+		}
+	  
+	  
+  
+	.product {
+	  flex-basis: 100%; 
+	}
+  }
 
