--- a/myapp/views/login.css
+++ b/myapp/views/login.css
@@ -149,3 +149,28 @@ main {
 	outline: none;
 	align-items: center;
 }
+
+
+
+@media (max-width: 768px) {
+		header {
+		  flex-direction: column; 
+		  text-align: center; 
+		}
+	  
+		
+		.logo {
+		  margin-bottom: 10px; 
+		  padding:5px;
+		}
+	  
+		nav ul {
+		  list-style: none;
+		  padding: 0;
+		}
+	  
+		nav li {
+		  margin-bottom: 10px; 
+		}
+	  
+}
