--- a/myapp/contact.css
+++ b/myapp/contact.css
@@ -102,3 +102,25 @@ main {
 	font-size: 18px;
 	margin-bottom: 10px;
 }
+@media (max-width: 768px) {
+		header {
+		  flex-direction: column; 
+		  text-align: center; 
+		}
+	  
+		
+		.logo {
+		  margin-bottom: 10px; 
+		  padding:5px;
+		}
+	  
+		nav ul {
+		  list-style: none;
+		  padding: 0;
+		}
+	  
+		nav li {
+		  margin-bottom: 10px; 
+		}
+	  
+}
