--- a/myapp/register.css
+++ b/myapp/register.css
@@ -135,3 +135,26 @@ main {
 	font-size: 15px;
 	margin-bottom: 10px;
 }
+
+@media (max-width: 768px) {
+		header {
+		  flex-direction: column; 
+		  text-align: center; 
+		}
+	  
+		
+		.logo {
+		  margin-bottom: 10px; 
+		  padding:5px;
+		}
+	  
+		nav ul {
+		  list-style: none;
+		  padding: 0;
+		}
+	  
+		nav li {
+		  margin-bottom: 10px; 
+		}
+	  
+}
