--- a/myapp/about.css
+++ b/myapp/about.css
@@ -107,3 +107,46 @@ main {
 	font-size: 15px;
 	margin-bottom: 10px;
 }
+
+
+@media (max-width: 768px) {
+	header {
+	  flex-direction: column; 
+	  text-align: center; 
+	}
+  
+	
+	.logo {
+	  margin-bottom: 10px; 
+	  padding:5px;
+	}
+  
+	nav ul {
+	  list-style: none;
+	  padding: 0;
+	}
+  
+	nav li {
+	  margin-bottom: 10px; 
+	}
+  
+}
+
+
+
+@media (max-width: 768px) {
+	.container {
+	  padding: 10px; 
+	  height: auto; 
+	}
+  
+	.container h2 {
+	  font-size: 24px; 
+	}
+  
+	.container h3 {
+	  font-size: 14px; 
+	  margin-bottom: 20px; 
+	}
+  }
+  
