--- a/myapp/views/loginuser.ejs
+++ b/myapp/views/loginuser.ejs
@@ -55,6 +55,11 @@
 	margin-bottom: 10px;
 	font-weight: 700;
 }
+@media (max-width:768px){
+	.product {
+	  flex-basis: 100%; 
+	}
+}
 
 	 </style>
 
