--- a/myapp/views/contactuser.ejs
+++ b/myapp/views/contactuser.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Contact Us</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../contact.css">
 	<link rel="stylesheet" href="../indexFooter.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
