--- a/myapp/views/payment.ejs
+++ b/myapp/views/payment.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<title>Farmers' Store</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../payment.css" rel="stylesheet">
 	<link rel="stylesheet" href="../shop.css">
 	<link rel="stylesheet" href="../indexFooter.css">
